fixed promo section alignment issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -163,19 +163,64 @@ table {
 
 .promo {
   height: 200px;
-  width: 100%;
+  width: fit-content;
   z-index: 1;
+  margin: 0 auto;
 }
 
 .promo ul {
   z-index: 1;
   overflow: hidden;
-  margin: 0 auto;
   min-width: 1024px;
-  width: 100%;
-  max-width: 1440px;
+  width: 1440px;
   height: 200px;
   text-align: center;
+}
+
+.promoul {
+  position: relative;
+  z-index: 1;
+  float: left;
+  overflow: hidden;
+  margin: 0;
+  width: 25%;
+  height: 200px;
+}
+
+.promoul a {
+  height: 200px;
+}
+
+#promo1 {
+  width: 100%;
+  height: 200px;
+  background-image: url("https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#promo2 {
+  width: 100%;
+  height: 200px;
+  background-image: url("https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#promo3 {
+  width: 100%;
+  height: 200px;
+  background-image: url("https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#promo4 {
+  width: 100%;
+  height: 200px;
+  background-image: url("https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .navbar-items li {
@@ -215,16 +260,6 @@ table {
   text-shadow: 0 1px rgb(65, 65, 65);
 }
 
-
-.promo ul li {
-  position: relative;
-  z-index: 1;
-  float: left;
-  overflow: hidden;
-  margin: 0;
-  width: 25%;
-  height: 200px;
-}
 
 .homefooter {
   z-index: 1;
